vathuglife: fixed CORS origin for FE